# rcard

./: .gitignore  .nickel_shim_debug.ncl  Cargo.toml  app.kdl  build-metadata.json  config.json  decode_regions.py  decode_tasks.py  extract_elfs.py  extract_tfw.py  extracted.tfw  find_zip.py  fuses.md  inspect_config.py  inspect_zip.py  llm-async-plan.md  run.nu  rust-toolchain.toml  test_speed.py
desktop/cli/: Cargo.toml
desktop/cli/src/: main.rs
firmware/: Cargo.toml  app.kdl  build.nu  hubris-env.toml  lib.ncl  run.nu  rust-analyzer.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/apps/: fob.ncl  stub.ncl
firmware/boards/: bentoboard.ncl  sf32lb52_devkit_lcd.ncl  sf32lb52_devkit_nano.ncl
firmware/bootloader/: Cargo.toml  bootloader.ncl  build.rs
firmware/bootloader/src/: main.rs
firmware/chips/: SF32LB525UC6.kdl  SF32LB52JUD6.kdl  sf32lb52-ram.kdl  sf32lb52.kdl  sf32lb52.ncl  sf32lb525uc6.ncl  sf32lb52jud6.ncl
firmware/hubris/abi/: Cargo.toml
firmware/hubris/armv8-m-mpu/: Cargo.toml
firmware/hubris/build-call_rustfmt/: Cargo.toml
firmware/hubris/build-kconfig/: Cargo.toml
firmware/hubris/build-phash-gen/: Cargo.toml
firmware/hubris/build-util/: Cargo.toml
firmware/hubris/kern/: Cargo.toml  build.rs
firmware/hubris/kerncore/: Cargo.toml
firmware/hubris/kipc/: Cargo.toml
firmware/hubris/phash/: Cargo.toml
firmware/hubris/toml-task/: Cargo.toml
firmware/hubris/unwrap-lite/: Cargo.toml
firmware/hubris/userlib/: Cargo.toml
firmware/kernels/sf32lb52/: Cargo.toml  build.rs  kernel.ncl
firmware/layouts/: prod.ncl  prod_a.ncl  prod_b.ncl  prod_base.ncl  ramboot.ncl
firmware/modules/ipc/: Cargo.toml  build.rs
firmware/modules/memfns/: Cargo.toml
firmware/modules/storage_api/: Cargo.toml
firmware/patches/abi/: Cargo.toml
firmware/patches/musb/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE  README.md  build.rs  update_prebuild.py
firmware/patches/userlib/: build.rs
firmware/renode/: SF32LB52_SDMMC.cs  find_die_loop.py  sf32lb52.repl  sf32lb52.resc
firmware/scripts/: Get-UsbComPorts.ps1  _lfs.py  _pack.py  build_peers.rs  check-handle-acl.nu  gen-renode-repl.py  gen_ftab.py  kdl-preprocess.py  memmap.py  parse_log_entry.nu  parse_log_entry.py  read_ringbuf.py  resolve-species-locations.py  run-clippy.py  run-exhubris.py  run-log-scraper.py  sdmmc.nu
firmware/sysmodule/bluetooth/: Cargo.toml  task.ncl
firmware/sysmodule/boilerplate/: Cargo.toml  task.ncl
firmware/sysmodule/cap1208/: Cargo.toml  task.ncl
firmware/sysmodule/clocks/: Cargo.toml  task.ncl
firmware/sysmodule/compositor/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/device/: Cargo.toml  task.ncl
firmware/sysmodule/device_info/: Cargo.toml  task.ncl
firmware/sysmodule/display/: Cargo.toml  task.ncl
firmware/sysmodule/drv2603/: Cargo.toml  task.ncl
firmware/sysmodule/efuse/: Cargo.toml  task.ncl
firmware/sysmodule/fs/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/host_proxy/: Cargo.toml  task.ncl
firmware/sysmodule/lcpu/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/log/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/log_sink_storage/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/log_sink_usb/: Cargo.toml  task.ncl
firmware/sysmodule/mpi/: Cargo.toml  task.ncl
firmware/sysmodule/mpr121/: Cargo.toml  task.ncl
firmware/sysmodule/power/: Cargo.toml  task.ncl
firmware/sysmodule/rand/: Cargo.toml  task.ncl
firmware/sysmodule/reactor/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/region_hibernation/: Cargo.toml  task.ncl
firmware/sysmodule/sdmmc/: Cargo.toml
firmware/sysmodule/storage/: Cargo.toml  build.rs  task.ncl
firmware/sysmodule/syscon/: Cargo.toml  task.ncl
firmware/sysmodule/time/: Cargo.toml  task.ncl
firmware/sysmodule/usart/: Cargo.toml  task.ncl
firmware/sysmodule/usb/: Cargo.toml  task.ncl
firmware/sysmodule/usb_protocol/: Cargo.toml  task.ncl
firmware/sysmodule/usb_protocol_fob/: Cargo.toml  task.ncl
firmware/sysmodule/usb_protocol_host/: Cargo.toml  task.ncl
firmware/tasks/fob/: Cargo.toml  task.ncl
firmware/tasks/idle/: task.ncl
firmware/tasks/kernel-sf32lb52/: Cargo.toml  build.rs
firmware/tasks/stub/: Cargo.toml  task.ncl
firmware/tasks/supervisor/: Cargo.toml  build.rs  task.ncl
fob/: Cargo.toml  build.rs  memory.x
fob/.cargo/: config.toml
fob/renode/: run.nu  sf32lb52.repl  sf32lb52.resc
fob/src/: logger.rs  main.rs
host/app/: Cargo.toml  build.rs
host/app/src/: app.rs  bridge.rs  ipc.rs  ipc_handle.rs  main.rs  port_registry.rs  sidebar.rs  state.rs  stub.rs  theme.rs
host/cli/: Cargo.toml  build.rs
host/cli/src/: main.rs  metadata.rs  stacktrace.rs  stub.rs  tfw.rs
host/emulator/: Cargo.toml
host/emulator/src/: builder.rs  lib.rs  monitor.rs  transport.rs
host/ipc-runtime/: Cargo.toml
host/ipc-runtime/src/: decode.rs  encode.rs  lib.rs  registry.rs  value.rs
host/serial/: Cargo.toml
host/serial/src/: capability.rs  error.rs  lib.rs  usart1.rs  usart2.rs
host/tfw/: Cargo.toml
host/tfw/src/: archive.rs  build.rs  build_metadata.rs  codegen.rs  compile.rs  config.rs  elf_cache.rs  ipc_metadata.rs  layout.rs  lib.rs  link.rs  linker.rs  log_metadata.rs  pack.rs  renode.rs  schema_dump.rs
host/tfw/tests/: codegen_smoke.rs  config_smoke.rs  emit_fob_config.rs  full_pipeline.rs  integration_smoke.rs  layout_smoke.rs  linker_smoke.rs
host/usb/: Cargo.toml
host/usb/examples/: probe.rs
host/usb/src/: crc.rs  error.rs  fob_reader.rs  hotplug.rs  ipc.rs  lib.rs
kernel-sf32lb52/: Cargo.toml  build.rs
kernel-sf32lb52/src/: main.rs
modules/ipc/: Cargo.toml  system.md
modules/ipc/macros/: Cargo.toml
modules/ipc/src/: alloc_take.rs  arena.rs  call.rs  handle.rs  (+5 more)
shared/lilla-oxid/: Cargo.toml  Session.vim
shared/log/: Cargo.toml
sysmodule/display/: Cargo.toml
sysmodule/fs/: Cargo.toml  build.rs
sysmodule/log/: Cargo.toml  build.rs
sysmodule/reactor/: Cargo.toml  build.rs
sysmodule/sdmmc/: Cargo.toml
sysmodule/storage/: Cargo.toml  build.rs
sysmodule/usart/: Cargo.toml
(+494 files in other folders)
