[workspace]
resolver = "2"
members = ["sysmodule/usart", "sysmodule/usart/api", "fob", "modules/ipc", "modules/ipc/macros", "kernel-sf32lb52", "supervisor"]

[workspace.dependencies]
userlib = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
idyll_runtime = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
hubris-build = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
hubris-task-slots = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
kipc = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = true

[workspace.metadata.rust-analyzer]
cargo.target = "thumbv8m.main-none-eabihf"
cargo.buildScripts.enable = true
check.allTargets = false
