[workspace]
resolver = "2"
members = [
    "sysmodule/usart",
    "sysmodule/usart/api",
    "sysmodule/display",
    "sysmodule/display/api",
    "sysmodule/log",
    "sysmodule/log/api",
    "sysmodule/time",
    "sysmodule/time/api",
    "sysmodule/sdmmc",
    "sysmodule/sdmmc/api",
    "sysmodule/fs",
    "sysmodule/fs/api",
    "sysmodule/reactor",
    "sysmodule/reactor/api",
    "sysmodule/storage",
    "sysmodule/storage/api",
    "sysmodule/compositor",
    "sysmodule/compositor/api",
    "sysmodule/log_sink_storage",
    "modules/storage_api",
    "tasks/fob",
    "modules/ipc",
    "modules/ipc/macros",
    "modules/once_cell",
    "tasks/kernel-sf32lb52",
    "tasks/supervisor",
    "tasks/idle",
]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
declare_interior_mutable_const = "allow"

[workspace.dependencies]
userlib = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173", features = [
    "no-panic-handler",
] }
idyll_runtime = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
hubris-build = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
hubris-task-slots = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }
kipc = { git = "https://github.com/cbiffle/exhubris", rev = "69d2f5ca8017fc3aaf692eae9455ac9fcd883173" }

[patch."https://github.com/cbiffle/exhubris"]
userlib = { path = "patches/userlib" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[workspace.metadata.rust-analyzer]
cargo.target = "thumbv8m.main-none-eabihf"
cargo.buildScripts.enable = true
check.allTargets = false
