[workspace]
resolver = "2"
members = [
    "sysmodule/usart",
    "sysmodule/usart/api",
    "sysmodule/display",
    "sysmodule/display/api",
    "sysmodule/log",
    "sysmodule/log/api",
    "sysmodule/time",
    "sysmodule/time/api",
    "sysmodule/fs",
    "sysmodule/fs/api",
    "sysmodule/reactor",
    "sysmodule/reactor/api",
    "sysmodule/efuse",
    "sysmodule/efuse/api",
    "sysmodule/rand",
    "sysmodule/rand/api",
    "sysmodule/device",
    "sysmodule/device/api",
    "sysmodule/storage",
    "sysmodule/storage/api",
    "sysmodule/compositor",
    "sysmodule/compositor/api",
    "sysmodule/boilerplate/api",
    "sysmodule/boilerplate",
    "sysmodule/mpi",
    "sysmodule/mpi/api",
    "sysmodule/log_sink_storage",
    "sysmodule/usb",
    "sysmodule/usb/api",
    "sysmodule/usb_protocol",
    "sysmodule/usb_protocol/api",
    "sysmodule/usb_protocol_host",
    "sysmodule/usb_protocol_fob",
    "sysmodule/usb_protocol_fob/api",
    "sysmodule/host_transport/api",
    "sysmodule/host_proxy",
    "sysmodule/log_sink_usb",
    "modules/storage_api",
    "modules/ipc",
    "modules/ipc/macros",
    "modules/once_cell",
    "modules/generated",
    "modules/memfns",
    "hubris/abi",
    "hubris/userlib",
    "tasks/fob",
    "bootloader",
    "kernels/sf32lb52",
    "tasks/supervisor",
    "tasks/idle",
]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
declare_interior_mutable_const = "allow"

[workspace.dependencies]
userlib = { path = "hubris/userlib" }
abi = { path = "hubris/abi" }
kipc = { path = "hubris/kipc" }
rcard_log = { path = "../shared/log", package = "rcard-log" }

[patch.crates-io]
musb = { path = "patches/musb" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"

[workspace.metadata.rust-analyzer]
cargo.target = "thumbv8m.main-none-eabihf"
cargo.buildScripts.enable = true
check.allTargets = false
