[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rcard-log = { path = "../../shared/log", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
terminal_size = "0.4"
zerocopy = { version = "0.8", features = ["derive"] }
