[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
clap = { version = "4", features = ["derive"] }
engine = { path = "../engine" }
emulator = { path = "../emulator" }
gimli = "0.31"
serial = { path = "../serial" }
rcard-log = { path = "../../shared/log", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
