[package]
name = "emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
cobs = "0.3"
device = { path = "../device" }
rcard-log = { path = "../../shared/log", features = ["alloc"] }
rcard-places = { path = "../../shared/places", features = ["std"] }
tokio = { version = "1", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zerocopy = "0.8"
tempfile = "3"
which = "7"
