[package]
name = "ipc-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1", features = ["alloc"] }
postcard-schema = { version = "0.2", features = ["alloc", "use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcard-usb-proto = { path = "../../shared/usb-proto" }
indexmap = "2"
