[package]
name = "usb"
version = "0.1.0"
edition = "2024"

[dependencies]
device = { path = "../device" }
rcard-usb-proto = { path = "../../shared/usb-proto", features = ["std"] }
rcard-log = { path = "../../shared/log", features = ["alloc"] }
nusb = "0.1"
zerocopy = "0.8"
tokio = { version = "1", features = ["sync", "rt", "time"] }
