[package]
name = "ipc"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[features]
dangerously_enable_uart3_debugging = []

[dependencies]
userlib.workspace = true
zerocopy = { version = "0.8.40", features = ["derive"] }
idyll_runtime.workspace = true
hubpack = "0.1.2"
serde = { version = "1", default-features = false, features = ["derive"] }
ipc-macros = { path = "macros" }
