[package]
name = "rcard-log"
version = "0.1.0"
edition = "2021"

[features]
alloc = []
writer = []
userlib = ["dep:userlib"]
panics-emit-stack-dump = ["writer"]

[dependencies]
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
rcard-log-macros = { path = "macros" }
userlib = { path = "../../firmware/hubris/userlib", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard-schema = { version = "0.2", default-features = false, features = ["derive"] }

[dev-dependencies]
rcard-log = { path = ".", features = ["writer"] }
