[package]
name = "sysmodule_display"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack = "0.1.2"
idyll_runtime.workspace = true
ipc = { path = "../../modules/ipc" }
sysmodule_display_api = { path = "api" }
userlib.workspace = true

[[bin]]
name = "sysmodule_display"
test = false
bench = false
