[package]
name = "sysmodule_sdmmc"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack = "0.1.2"
hubris-task-slots.workspace = true
idyll_runtime.workspace = true
ipc = { path = "../../modules/ipc" }
sf32lb52-pac = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }
sysmodule_log_api = { path = "../../sysmodule/log/api", features = ["logger"] }
sysmodule_sdmmc_api = { path = "api" }
userlib = { workspace = true, features = ["no-panic-handler"] }

[[bin]]
name = "sysmodule_sdmmc"
test = false
bench = false
