[package]
name = "sysmodule_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
hubpack = "0.1.2"
hubris-task-slots.workspace = true
idyll_runtime.workspace = true
ipc = { path = "../../modules/ipc" }
log = { version = "0.4", default-features = false }
sysmodule_log_api = { path = "../../sysmodule/log/api", features = ["logger"] }
sysmodule_sdmmc_api = { path = "../sdmmc/api" }
sysmodule_storage_api = { path = "api" }
storage_api = { path = "../../modules/storage_api" }
userlib = { workspace = true, features = ["no-panic-handler"] }

[build-dependencies]
serde_json = "1"

[[bin]]
name = "sysmodule_storage"
test = false
bench = false
