[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy = { version = "0.8.25", default-features = false, features = ["derive"] }
bitflags = { version = "2.5.0", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
phash = { path = "../phash" }

[lib]
test = false
bench = false

[lints.rust]
warnings = "deny"
