[package]
name = "kern"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.5.0", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
cfg-if = { version = "1", default-features = false }
cortex-m = { version = "0.7", default-features = false, features = ["inline-asm"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
ssmarshal = { version = "1.0.0", default-features = false }
zerocopy = { version = "0.8.25", default-features = false }
zerocopy-derive = { version = "0.8.25", default-features = false }

abi = { path = "../abi" }
armv8-m-mpu = { path = "../armv8-m-mpu" }
phash = { path = "../phash" }
unwrap-lite = { path = "../unwrap-lite" }
kerncore = { path = "../kerncore" }

[build-dependencies]
anyhow = { version = "1.0.31", default-features = false, features = ["std"] }
indexmap = { version = "1.4.0", default-features = false, features = ["serde-1"] }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
ron = { version = "0.8", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
syn = { version = "2", default-features = false, features = ["derive", "parsing", "proc-macro", "extra-traits", "full", "printing"] }

abi = { path = "../abi" }
build-kconfig = { path = "../build-kconfig" }
build-util = { path = "../build-util" }
call_rustfmt = { path = "../build-call_rustfmt" }
phash-gen = { path = "../build-phash-gen" }

[features]
dump = []
nano = []
stack-watermark = []

[lib]
test = false
doctest = false
bench = false

[lints.rust]
warnings = "deny"
