[package]
name = "kernel-sf32lb52"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel-sf32lb52"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
sifli-pac = { version = "0.2", features = ["sf32lb52x"] }

[dependencies.hubris-kern]
package = "kern"
path = "../../hubris/kern"
features = ["stack-watermark"]

[build-dependencies]
serde_json = "1"

[lints]
workspace = true
